[metadata]
description-file = README.md
name = twitter-toolbox
version = 1.0.7
description = Twitter Toolbox for Python
long_description = Twitter Toolbox for Python
author = Hugo Hromic
author_email = hhromic@gmail.com
maintainer = Hugo Hromic
maintainer_email = hhromic@gmail.com
url = https://github.com/hhromic/python-twitter-toolbox
download_url = https://github.com/hhromic/python-twitter-toolbox/tarball/1.0.7
requires = tweepy, colorlog
provides = twtoolbox
keywords = twitter, api, cli, toolbox
classifiers = Environment :: Console
license = Apache-2.0
platforms = all

[options.package_data]
twtoolbox = defaults.cfg

[bdist_wheel]
universal = 1
